; ModuleID = '/home/carl/AnghaBench/rufus/src/ext2fs/extr_csum.c_ext2fs_mmp_csum_verify.c'
source_filename = "/home/carl/AnghaBench/rufus/src/ext2fs/extr_csum.c_ext2fs_mmp_csum_verify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.mmp_struct = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ext2fs_mmp_csum_verify(%struct.TYPE_4__* %0, %struct.mmp_struct* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca %struct.mmp_struct*, align 8
  %6 = alloca i64, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %4, align 8
  store %struct.mmp_struct* %1, %struct.mmp_struct** %5, align 8
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @ext2fs_has_feature_metadata_csum(i32 %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %24

13:                                               ; preds = %2
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %15 = load %struct.mmp_struct*, %struct.mmp_struct** %5, align 8
  %16 = call i64 @ext2fs_mmp_csum(%struct.TYPE_4__* %14, %struct.mmp_struct* %15)
  store i64 %16, i64* %6, align 8
  %17 = load %struct.mmp_struct*, %struct.mmp_struct** %5, align 8
  %18 = getelementptr inbounds %struct.mmp_struct, %struct.mmp_struct* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i64 @ext2fs_le32_to_cpu(i32 %19)
  %21 = load i64, i64* %6, align 8
  %22 = icmp eq i64 %20, %21
  %23 = zext i1 %22 to i32
  store i32 %23, i32* %3, align 4
  br label %24

24:                                               ; preds = %13, %12
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @ext2fs_has_feature_metadata_csum(i32) #1

declare dso_local i64 @ext2fs_mmp_csum(%struct.TYPE_4__*, %struct.mmp_struct*) #1

declare dso_local i64 @ext2fs_le32_to_cpu(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
